assets/css/main.css
/* ... */
input[type='submit'].small,
input[type='reset'].small,
input[type='button'].small,
button.small,
.button.small {
  font-size: 0.6em;
}

input[type='submit'].large,
input[type='reset'].large,
input[type='button'].large,
button.large,
.button.large {
  font-size: 1em;
}

input[type='submit'].disabled,
input[type='submit']:disabled,
input[type='reset'].disabled,
input[type='reset']:disabled,
input[type='button'].disabled,
input[type='button']:disabled,
button.disabled,
button:disabled,
.button.disabled,
.button:disabled {
  opacity: 0.25;
}

@media screen and (max-width: 480px) {
  input[type='submit'],
  input[type='reset'],
  input[type='button'],
  button,
  .button {
    padding: 0;
  }
}

/* Features */

.features {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 0 2em 0;
}

.features article {
  padding: 1.75em 1.75em 0.1em 1.75em;
  background-color: #353849;
  border-radius: 5px;
  margin: 1.5em 3em 1.5em 0;
  width: calc(50% - 1.5em);
}

.features article:nth-child(2n) {
  margin-right: 0;
}

.features article .image {
  border-radius: 5px 5px 0 0;
  display: block;
  margin-bottom: 1.75em;
  margin-left: -1.75em;
  margin-top: -1.75em;
  position: relative;
  width: calc(100% + 3.5em);
}

.features article .image img {
  border-radius: 5px 5px 0 0;
  width: 100%;
}

.card-buttons {
  display: flex;
}

@media screen and (max-width: 736px) {
  .card-buttons input {
    width: 120px;
  }
}

@media screen and (max-width: 480px) {
  .card-buttons input {
    width: 95px;
  }
}

.card-buttons li {
  margin-right: 20px;
}

.technology-used {
  letter-spacing: 1px;
  font-size: 14px;
  text-transform: uppercase;
}

@media screen and (max-width: 980px) {
  .features article {
    margin: 1em 2em 1em 0;
    width: calc(50% - 1em);
  }
}

@media screen and (max-width: 736px) {
  .features article {
    padding: 1.5em 1.5em 0.1em 1.5em;
    margin: 0.875em 1.75em 0.875em 0;
    width: calc(50% - 0.875em - 1px);
  }

  .features article .image {
    margin-bottom: 1.5em;
    margin-left: -1.5em;
    margin-top: -1.5em;
    width: calc(100% + 3em);
  }
}

@media screen and (max-width: 736px) {
  .features {
    display: block;
  }

  .features article {
    width: 100%;
    margin: 0 0 2em 0 !important;
  }
}

/* Header */

#header {
  -moz-transition: background-color 0.2s ease-in-out;
  -webkit-transition: background-color 0.2s ease-in-out;
  -ms-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  background-color: #2d3142f3;
  height: 3.5em;
  left: 0;
  line-height: 3.5em;
  padding: 0 1.25em;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10000;
}

#header h1 {
  -moz-transition: opacity 0.2s ease-in-out, visibility 0.2s;
  -webkit-transition: opacity 0.2s ease-in-out, visibility 0.2s;
  -ms-transition: opacity 0.2s ease-in-out, visibility 0.2s;
  transition: opacity 0.2s ease-in-out, visibility 0.2s;
  border-bottom: 0;
  font-size: 1.2em;
  margin-bottom: 0;
  opacity: 1;
  visibility: visible;
}

#header h1 a {
  border: 0;
}

#header nav {
  font-family: Raleway, Helvetica, sans-serif;
  font-size: 0.8em;
  font-weight: 700;
  height: 3em;
  letter-spacing: 0.1em;
  line-height: 3em;
  position: absolute;
  right: 0.7em;
  text-transform: uppercase;
  top: 0.7em;
}

#header nav a {
  border: 0;
  display: inline-block;
  padding: 0 1em;
}

#header nav a:before {
  float: right;
  margin-left: 0.75em;
}

#header nav a[href='#menu'] {
  text-decoration: none;
}

#header.alt {
  background-color: transparent;
}

#header.alt h1 {
  opacity: 0;
  visibility: hidden;
}

@media screen and (max-width: 736px) {
  #header {
    height: 2.75em;
    line-height: 2.75em;
  }

  #header nav {
    top: 0;
    right: 0;
    height: inherit;
    line-height: inherit;
  }

  #header nav a {
    height: inherit;
    line-height: inherit;
  }

  #header nav a[href='#menu'] {
    box-shadow: none;
    padding: 0 1em;
    border-radius: 0;
  }

  #header nav a[href='#menu']:hover,
  #header nav a[href='#menu']:active {
    background-color: inherit;
  }
}

@media screen and (max-width: 480px) {
  #header nav a[href='#menu'] {
    width: 4em;
    white-space: nowrap;
    text-indent: 4em;
    position: relative;
  }

  #header nav a[href='#menu']:before {
    width: inherit;
    position: absolute;
    top: 0;
    left: 0;
    text-indent: 0;
    text-align: right;
    margin-left: 0;
    padding-right: 1.25em;
  }
}

/* Banner */

#banner {
  padding: 10em 0 4.75em 0;
}

#banner .inner {
  margin: 0 auto;
  width: 55em;
}

#banner .logo {
  -moz-transition: opacity 2s ease, -moz-transform 1s ease;
  -webkit-transition: opacity 2s ease, -webkit-transform 1s ease;
  -ms-transition: opacity 2s ease, -ms-transform 1s ease;
  transition: opacity 2s ease, transform 1s ease;
  -moz-transform: translateY(0);
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  opacity: 1;
  margin: 0 0 1.3em 0;
}

#banner .logo .icon {
  border-radius: 100%;
  border: solid 2px rgba(255, 255, 255, 0.125);
  cursor: default;
  display: inline-block;
  font-size: 2em;
  height: 2.25em;
  line-height: 2.25em;
  text-align: center;
  width: 2.25em;
  opacity: 0.8;
}
/* ... */

